--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,7 @@
+h2 {
+    font-weight: bold;
+}
+
 #root {
     height: 100vh;
     width: 100vw;
@@ -31,6 +35,7 @@
 .inputArea {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .input {
