--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,9 +18,12 @@ h2 {
     grid-column: 1;
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 70%;
     place-content: center;
+    align-self: center;
+    justify-self: self-end;
+    border: solid 1px #d5d5d5;
 }
 
 #inputsContainer {
@@ -41,11 +44,121 @@ h2 {
 .input {
     align-self: center;
     text-align: center;
+    background: rgb(247, 247, 247);
+    background: linear-gradient(
+        0deg,
+        rgba(247, 247, 247, 1) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+    border: solid 1px #d5d5d5;
+    border-radius: 5px;
+}
+
+button {
+    background: rgb(247, 247, 247);
+    background: linear-gradient(
+        0deg,
+        rgba(247, 247, 247, 1) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+    border: solid 1px #d5d5d5;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 #CV {
     grid-column: 2;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 80%;
+    width: 70%;
+    justify-self: self-start;
+    align-self: center;
+    border: solid 1px #d5d5d5;
+}
+
+#basicInfoContainer {
+    grid-row: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 80%;
+    width: 100%;
+    align-self: center;
+    align-items: center;
+}
+
+#nameContainer {
+    font-size: 30px;
+    margin-bottom: 10px;
+    grid-column: 1;
+    text-align: center;
+    font-weight: bold;
+}
+
+#basicInfoExtraContainer {
+    grid-column: 2;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    text-align: center;
     width: 100%;
+    height: 50%;
+    place-content: space-evenly;
+    align-items: flex-end;
+}
+
+.basicInfoExtraContainerItem {
+    display: flex;
+    width: 200px;
+}
+
+svg {
+    margin-right: 5%;
+}
+
+#emailContainer {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+#phoneNumberContainer {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+#websiteContainer {
+    grid-row: 3;
+    grid-column: 3;
+}
+
+#educationInfoContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 25px;
+    width: 100%;
+    border-top: solid 1px #d5d5d5;
+    padding-top: 15px;
+}
+
+.entryContainer {
+    width: 50%;
+    border-bottom: solid 1px #d5d5d5;
+}
+
+.entry {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    font-size: 17px;
+}
+
+#workExperienceInfoContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 25px;
+    width: 100%;
+    border-top: solid 1px #d5d5d5;
+    padding-top: 15px;
 }
