--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 h2 {
     font-weight: bold;
+    margin-bottom: 10px;
 }
 
 #root {
@@ -14,6 +15,7 @@ h2 {
     height: 100%;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    background: #4c629f;
 }
 
 #Inputs {
@@ -42,6 +44,7 @@ h2 {
     justify-content: space-evenly;
     padding-bottom: 5%;
     padding-top: 5%;
+    background: #bdceff;
 }
 
 #inputAreaEducationInfoContainer {
@@ -53,41 +56,44 @@ h2 {
     align-self: center;
 }
 #basicInputsContainer {
-    border: solid 1px #d5d5d5;
+    border: solid 1px #2f3440;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 #educationInputsContainer {
-    border-bottom: solid 1px #d5d5d5;
-    border-left: solid 1px #d5d5d5;
-    border-right: solid 1px #d5d5d5;
+    border-bottom: solid 1px #2f3440;
+    border-left: solid 1px #2f3440;
+    border-right: solid 1px #2f3440;
 }
 
 #workExperienceInputsContainer {
-    border-bottom: solid 1px #d5d5d5;
-    border-left: solid 1px #d5d5d5;
-    border-right: solid 1px #d5d5d5;
+    border-bottom: solid 1px #2f3440;
+    border-left: solid 1px #2f3440;
+    border-right: solid 1px #2f3440;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .input {
     align-self: center;
     text-align: center;
-    background: rgb(247, 247, 247);
-    background: linear-gradient(
-        0deg,
-        rgba(247, 247, 247, 1) 0%,
-        rgba(255, 255, 255, 1) 100%
-    );
-    border: solid 1px #d5d5d5;
+    background: #f1f4ff;
+    border: none;
     border-radius: 5px;
+    margin-bottom: 5px;
 }
 
 .entryInputArea {
     display: flex;
     flex-direction: column;
-    border: solid 1px #d5d5d5;
+    -webkit-box-shadow: 10px 10px 23px -10px rgba(47, 52, 64, 1);
+    -moz-box-shadow: 10px 10px 23px -10px rgba(47, 52, 64, 1);
+    box-shadow: 10px 10px 23px -10px rgba(47, 52, 64, 1);
     border-radius: 5px;
     padding: 5px;
     margin-top: 10px;
+    background: #ccd9ff;
 }
 
 .entryDeleteBtn {
@@ -97,13 +103,9 @@ h2 {
 }
 
 button {
-    background: rgb(247, 247, 247);
-    background: linear-gradient(
-        0deg,
-        rgba(247, 247, 247, 1) 0%,
-        rgba(255, 255, 255, 1) 100%
-    );
-    border: solid 1px #d5d5d5;
+    background: #d5e0ff;
+    outline: none;
+    border: none;
     border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -117,6 +119,7 @@ button {
     justify-self: self-start;
     align-self: center;
     border: solid 1px #d5d5d5;
+    background: white;
 }
 
 #basicInfoContainer {
@@ -124,7 +127,7 @@ button {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 80%;
-    width: 100%;
+    width: 90%;
     align-self: center;
     align-items: center;
 }
@@ -183,16 +186,32 @@ svg {
 }
 
 .entryContainer {
-    width: 50%;
-    border-bottom: solid 1px #d5d5d5;
+    padding-top: 15px;
+    width: 90%;
 }
 
 .entry {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     flex-direction: column;
-    align-items: center;
-    padding: 15px;
     font-size: 17px;
+}
+
+.entryTitle {
+    display: flex;
+    font-weight: bold;
+    font-size: 19px;
+    grid-row: 1;
+}
+
+.entryPlaceName {
+    display: flex;
+    grid-row: 2;
+}
+
+.entryDate {
+    display: flex;
+    justify-self: end;
 }
 
 #workExperienceInfoContainer {
