Generalized the input validation function so that it'll work on all inputs

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,6 +47,9 @@ h2 {
     background: #bdceff;
 }
 
+.textRequired {
+    color: #9f4c8b;
+}
 #inputAreaEducationInfoContainer {
     width: 50%;
     align-self: center;
