--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,7 @@
+html {
+    background: #4c629f;
+}
+
 h2 {
     font-weight: bold;
     margin-bottom: 10px;
@@ -104,6 +108,10 @@ h2 {
     background: #ccd9ff;
 }
 
+.cancelBtn {
+    margin-top: 5px;
+}
+
 .entryDeleteBtn {
     padding: 4px;
     align-self: flex-end;
@@ -118,6 +126,7 @@ button {
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
 #CV {
     grid-column: 2;
     display: grid;
